gcc/testsuite/g++.dg/diagnostic/sys-narrow1a.C
// { dg-do compile { target c++11 } }
// { dg-additional-options "-w" }

// { dg-error "narrowing" "" { target *-*-* } 2 }
#include "sys-narrow.h"
